--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "learning-management-system",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
+    "start": "nodemon -e js,ejs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -25,6 +26,7 @@
     "node-modules": "^1.0.1",
     "nodemon": "^3.0.3",
     "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.11.3",
     "prettier": "^3.2.4",
     "sequelize": "^6.35.2",
