--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "pretest": "NODE_ENV=test npx sequelize-cli db:drop && NODE_ENV=test npx sequelize-cli db:create",
+    "test": "NODE_ENV=test jest --detectOpenHandles",
+    "prepare": "cd .. && husky install todo-app/.husky",
     "start": "nodemon -e js,ejs",
-    "test": "NODE_ENV=test jest --detectOpenHandles"
+    "start:prod": "node index.js"
   },
   "author": "",
   "license": "ISC",
